--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
     />
     <link rel="stylesheet" href="styles/style.min.css" />
 
+    <script src="js/blockScrolled.js" defer></script>
     <script src="js/accordion.js" defer></script>
     <script src="js/smoothScroll.js" defer></script>
+    <script src="js/tabs.js" defer></script>
+    <script src="js/modal.js" defer></script>
+    <script src="js/burger.js" defer></script>
   </head>
   <body>
     <!-- header (start) -->
